<resources>
    <string name="app_name">La Tienda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_basic">BasicActivity</string>

    <string name="copyrighttext">Amovil 2018</string>

    <string name="correo">Correo Electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="olvidastecontraseña">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrate en Tiendapp</string>
    <string name="iniciarsesion">Iniciar Sesión</string>

    <string name="historicos">Históricos</string>
    <string name="perfil">Perfil</string>
    <string name="cerrarsesion">Cerrar Sesión</string>

    <string name="nombresyapellidos">Nombres y Apellidos</string>
    <string name="guaradar">Guardar</string>

    <string name="fechacualquiera">04/04/2018</string>
    <string name="productos">Productos</string>
    <string name="unidades">Unds.</string>
    <string name="precio">Precio</string>
    <string name="total">Total : $</string>

    <string name="buscarproducto">Buscar producto</string>

    <string name="aseoparaelhogar">ASEO PARA EL HOGAR</string>
    <string name="carnesfrias">CARNES FRÍAS Y EMBUTDOS</string>
    <string name="lacteosyderivados">LACTEOS Y DERIVADOS</string>

    <string name="cerrandosesion">Cerrando Sesion...</string>

    <string name="confirmarpedido">Confirmar Pedido</string>

    <string name="nota">Nota</string>
    <string name="pedidos">Todos los pedidos que acabas de realizar, llegarán en el próximo pedido de cada uno de tus proovedores.</string>


    <string name="factura">Factura</string>
    <string name="recuperatucontrasena">Recupera tu contraseña</string>
    <string name="registro">Registro</string>
    <string name="tuspedidos">Tus Pedidos</string>

    <string name="textorecuperatucontrasena">Ingresa el correo electronico con el que deseas recuperar tu contraseña.</string>

    <string name="cedula">Cedula</string>
    <string name="diligenciadatos">Diligencia los sigueintes datos y comienza a disfrutar de La Tienda y todos sus servicios. </string>
    <string name="terminosycondiciones">Al registrate, aceptas los Términos y Condiciones de La Tienda y confirmas haber leido nuestra politica de uso</string>
    <string name="registrarse2">Registrarase</string>

    <string name="carrito">Carrito</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
