<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.Factura">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                style="@style/letrafactura"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:text="@string/productos" />

            <TextView
                android:id="@+id/textView16"
                style="@style/letrafactura"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/unidades" />

            <TextView
                android:id="@+id/textView15"
                style="@style/letrafactura"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/precio" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollvistaproductos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/productosenlafactura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:layout_width="0dp"
                        android:maxLines="1"
                        android:text="Producto prueba 1" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:maxLines="1"
                        android:text="3" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="right"
                        android:maxLines="1"
                        android:text="3000" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/total"
                android:textColor="@color/verde"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3000"
                android:textColor="@color/verde"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/verde"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nota"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pedidos"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>