<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:foreground="@drawable/ripplerectangulo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tituloitemhistoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechacualquiera"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:textColor="@android:color/holo_red_dark"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/flechahistoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="3dp"
                android:rotation="90"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@mipmap/apertura" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/mostrarproductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tablahistoria1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="3dp"
                        android:text="@string/productos"
                        card_view:layout_constraintStart_toEndOf="@+id/textView3"
                        tools:layout_editor_absoluteY="52dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:gravity="right"
                        android:paddingBottom="3dp"
                        android:text="@string/unidades"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/textView2"
                        tools:layout_editor_absoluteY="49dp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:paddingBottom="3dp"
                        android:text="@string/precio"
                        android:textColor="@color/colorAccent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="52dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tablahistoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/total"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/verde" />

                <TextView
                    android:id="@+id/totalhistoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="TextView"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/verde" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
