<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amovil.latienda.fragmentos.Perfil">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/nombreperfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/nombresyapellidos"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreperfil" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guardarperfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3">

            <ImageButton
                android:id="@+id/redesgoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:foreground="@drawable/botoncircular"
                android:paddingLeft="0dp"
                app:srcCompat="@mipmap/logo_google_pantalla_2"
                tools:layout_editor_absoluteX="195dp"
                tools:layout_editor_absoluteY="383dp" />

            <ImageButton
                android:id="@+id/redesfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:foreground="@drawable/botoncircular"
                app:srcCompat="@mipmap/logo_face_pantalla_2"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="383dp" />
        </LinearLayout>

        <Button
            android:id="@+id/guardarperfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/botonverde"
            android:text="@string/guaradar"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/nombreperfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imagenperfil"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_shadow="false"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/imagenperfil"
                android:layout_alignRight="@+id/imagenperfil"
                android:layout_alignTop="@+id/imagenperfil"
                android:adjustViewBounds="false"
                android:background="@drawable/circuloverde"
                android:foreground="@drawable/botoncircular"
                android:scrollIndicators="none|top"
                android:src="@mipmap/camara"
                android:tint="@color/colorAccent" />


        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

